--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.1",
     "ytdl-core": "^4.11.5"
