--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 # VITE_BASE_URL = http://localhost:8000
 VITE_BASE_URL = https://ns-hacks-backend.onrender.com
+
+
+VITE_PROJECT_ID = able-rain-446914-s7
+VITE_LOCATION = us
+VITE_PROCESSOR_ID = a33fc0dd4ed1a3af
+
+# VITE_GOOGLE_APPLICATION_CREDENTIALS_JSON = /Users/kosangyadav/Downloads/able-rain-446914-s7-ed52eff76e83.json
