--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,10 @@ dist-ssr
 *.sln
 *.sw?
 
-# Can use later...
-Login.jsx
-Signup.jsx
-footer
-header
+# Later...
+
+DocumentAi.jsx
+OCR.jsx
+
+
+.env
