--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.1",
     "ytdl-core": "^4.11.5"
