integrated the ai and done with all the tasks

--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ VITE_PROJECT_ID = able-rain-446914-s7
 VITE_LOCATION = us
 VITE_PROCESSOR_ID = a33fc0dd4ed1a3af
 
+VITE_GEMINI_API_KEY = AIzaSyD0_uMqOG_ZJVvF9NHVWm7orLmxGFMgzTY
+
 # VITE_GOOGLE_APPLICATION_CREDENTIALS_JSON = /Users/kosangyadav/Downloads/able-rain-446914-s7-ed52eff76e83.json
