final frontend code nittish

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # VITE_BASE_URL = http://localhost:8000
-# VITE_BASE_URL = https://ns-hacks-backend.onrender.com
-VITE_BASE_URL = https://ns-hacks-backend.vercel.app
+VITE_BASE_URL = https://ns-hacks-backend.onrender.com
+# VITE_BASE_URL = https://ns-hacks-backend.vercel.app
 
 
 VITE_PROJECT_ID = able-rain-446914-s7
