--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_BASE_URL = http://localhost:8000
-VITE_BASE_URL = https://ns-hacks-backend.onrender.com
+VITE_BASE_URL = http://localhost:8000
+# VITE_BASE_URL = https://ns-hacks-backend.onrender.com
 # VITE_BASE_URL = https://ns-hacks-backend.vercel.app
 
 
